k8s/api/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podummy-blue
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podummy-blue
  template:
    metadata:
      labels:
        app: podummy-blue
    spec:
      containers:
        - name: podummy
          image: charmingruby/podummy:blue
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: podummy-blue
  namespace: api
spec:
  selector:
    app: podummy-blue
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
