k8s/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podummy
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: app.podummy.com
      http:
        paths:
          - path: /blue/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: podummy-blue
                port:
                  number: 80
          - path: /green/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: podummy-green
                port:
                  number: 80
